# autorace_idminer

camera/: CMakeLists.txt  package.xml
camera/camera_info/: camera.yaml
camera/launch/: autorace.launch  camera.launch
control/: CMakeLists.txt  package.xml  setup.py
control/launch/: control_lane.launch  control_moving.launch  control_tunnel.launch
control/nodes/: control_lane
core/: CMakeLists.txt  package.xml  setup.py
core/launch/: core.launch  gazebo.launch  mission.launch  turtle_teleop_key.launch  turtlesim.launch
core/nodes/: core_mode_decider  core_node_controller  core_node_controller copy  core_node_mission
detect/: CMakeLists.txt  package.xml  setup.py
detect/cfg/: DetectLane.cfg  DetectLevel.cfg  DetectTrafficLight.cfg
detect/launch/: detect_construction.launch  detect_intersection.launch  detect_lane.launch  detect_level.launch  detect_parking.launch  detect_traffic_light.launch  detect_tunnel.launch
detect/nodes/: detect_construction  detect_intersection  detect_lane  detect_level  detect_parking  detect_traffic_light  detect_tunnel
detect/yaml/: lane.yaml  level.yaml  traffic_light.yaml
turtlebot3_description/urdf/: turtlebot3_burger_for_autorace_2020.gazebo.xacro  turtlebot3_burger_for_autorace_2020.urdf.xacro
