<?xml version="1.0"?>
<package format="2">
  <name>core</name>
  <version>0.0.0</version>
  <description>
    Autorace Core Process
  </description>

  <maintainer email="zhl017@todo.todo">zhl017</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>

</package>
